# minsay

./: Cargo.toml  LICENSE  README.md
src/: cowsay.rs  creatures.rs  main.rs  quotes.rs
