[package]
version = "0.0.2"
name = "minsay"
description = "A partially satirical fortune+cowsay clone featuring quotes from the area of UNIX-hacker culture nihilism"
authors = ["diviocity"]
edition = "2024"
repository = "https://codeberg.org/diviocity/minsay"
homepage = "https://divio.city/projects/minsay"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
rand = "0.10.1"
